# point_click_care_automation

./: .gitignore  README.md
.github/workflows/: build-desktop.yml
docs/: USER-MANUAL-Clients-Facilities-QR.md
point-click-care-automation-app/: .dockerignore  .env.example  .gitignore  Dockerfile  GatewayPCC.spec  docker-compose.yml  installer.iss  menu.cmd  pyproject.toml  run_desktop.py  wsgi.py
point-click-care-automation-app/backend/: auth.py  automation.py  cloud.py  config.py  database.py  desktop.py  proxyrelay.py  qrtools.py  reportstore.py  server.py  tokenstore.py
point-click-care-automation-app/frontend/static/css/: style.css
point-click-care-automation-app/frontend/static/js/: desktop.js  server.js
point-click-care-automation-app/frontend/templates/: desktop.html  server.html
point-click-care-automation-app/scripts/: 99-pcc.sh  serve-pcc.sh
