[project]
name = "gateway-pcc"
version = "0.1.0"
description = "Gateway PCC - one app, two modes: hosted SERVER (accounts + encrypted vault) and DESKTOP agent (Selenium/Firefox + US proxy auto-login)."
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "selenium>=4.20",
    "pyotp>=2.9",
    "qrcode>=7.4",
    "opencv-python-headless>=4.9",
    "numpy>=1.24",
    "pillow>=10.0",
    "cryptography>=42.0",
    "pymongo>=4.6",
    "python-dotenv>=1.0",
    "gunicorn>=21.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.6",
]

[tool.uv]
package = false
